objects/DidUEnjoy_Post_Contact_Calls__mdt.object
<CustomObject>
    <label>DidUEnjoy - Post Contact Calls</label>
    <pluralLabel>DidUEnjoy - Post Contact Calls</pluralLabel>
    <fields>
        <fullName>ID_Survey__c</fullName>
        <label>ID Survey</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Survey_IA__c</fullName>
        <label>ID Survey IA</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_ID_IA__c</fullName>
        <label>Template ID IA</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_ID_JP__c</fullName>
        <label>Template ID JP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_ID_US__c</fullName>
        <label>Template ID US</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_ID_except_US__c</fullName>
        <label>Template ID except US</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>